--- a/src/plataform/templates/base.jinja
+++ b/src/plataform/templates/base.jinja
@@ -53,7 +53,7 @@
         {% block css %}
         {% endblock css %}
     </head>
-    <body class="bg-black">
+    <body>
         <nav class="bg-white fixed z-30 w-full">
             <div class="px-6 py-2 flex items-center justify-between">
 
