--- a/src/plataform/templates/logs.jinja
+++ b/src/plataform/templates/logs.jinja
@@ -319,7 +319,7 @@
                                                 </div>
                                                 <div class="ml-3">
                                                     <p class="text-gray-900 whitespace-no-wrap">{{ log.user.name }}</p>
-                                                    <p class="text-gray-600 whitespace-no-wrap">{{ log.user.email }}</p>
+                                                    <p class="text-gray-600 whitespace-no-wrap">{{ log.user.number }}</p>
                                                 </div>
                                             </div>
                                         </td>
@@ -335,7 +335,7 @@
                                             <p class="text-gray-900 whitespace-no-wrap">{{ log.created_at.date }}</p>
                                             <p class="text-gray-600 whitespace-no-wrap">{{ log.created_at.time }}</p>
                                         </td>
-                                        {% if log.status == 'Pendente' %}
+                                        {% if log.status == 'PENDDING' %}
                                             <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                                                 <span class="relative inline-block px-3 py-1 font-semibold text-orange-900 leading-tight">
                                                     <span aria-hidden
@@ -344,7 +344,7 @@
 
                                                 </span>
                                             </td>
-                                        {% elif log.status == 'Concluído' %}
+                                        {% elif log.status == 'APPROVED' %}
                                             <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
                                                 <span class="relative inline-block px-3 py-1 font-semibold text-green-900 leading-tight">
                                                     <span aria-hidden
