fix(numbers): :bug: Fix name on classes

--- a/src/plataform/templates/numbers.jinja
+++ b/src/plataform/templates/numbers.jinja
@@ -37,6 +37,10 @@
                     </button>
                 </div>
             </form>
+
+            <img src="{% static 'characters/Add-User.svg' %}"
+                 alt="Ilustração de adicionar usuários"
+                 class="w-1/2 mt-32">
         </div>
         <div class="flex-1 container mx-auto px-4 sm:px-32">
             <div class="py-8">
