--- a/src/plataform/templates/base.jinja
+++ b/src/plataform/templates/base.jinja
@@ -78,7 +78,7 @@
 
                 <div class="flex flex-col mt-4 font-ui items-center space-y-2 mt-6 w-full">
                     <a class="text-textPrimary hover:text-textSecondary font-title font-bold py-2 px-4 bg-zinc-800 rounded text-xl w-full text-center"
-                       href="{% url 'logs' %}">Histórico</a>
+                       href="{% url 'logs' %}">Históricos</a>
                 </div>
 
                 <div class="flex flex-col mt-4 font-ui items-center space-y-2 mt-4 w-full">
